--- a/chingoal/home/templates/dashboard.html
+++ b/chingoal/home/templates/dashboard.html
@@ -39,18 +39,19 @@
                         <a class="page-scroll" href="#portfolio">Lessons</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="">Discussion</a>
+                        <a class="page-scroll" href="#services">Discussion</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{% url 'store' %}">Store</a>
+                        <a class="page-scroll" href="#about">Store</a>
                     </li>                    
                     <li>
-                        <a class="page-scroll" href="{% url 'logout' %}">Log Out</a>
+                        <a class="page-scroll" href="#contact">About Us</a>
                     </li>
                     <li>
-                        <a class="page-scroll">
-                            <img src="{% static "img/profile.jpg"%}" class="img-responsive img-circle"  alt="" id="header_profile_picture">
-                        </a>
+                        
+                     <a href="#portfolioModal1" class="portfolio-link page-scroll" data-toggle="modal">
+                        <img src="{% static "img/profile.jpg"%}" class="img-responsive img-circle"%}"  alt="" id="header_profile_picture">                                                
+                     </a>
                     </li>
                 </ul>
             </div>
@@ -62,7 +63,7 @@
 
     <!-- Portfolio Grid Section -->
     <section id="portfolio" class="bg-light-gray">
-        <div class="container">
+        <div class="container" id="container" style="z-index:0;">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Lessons</h2>
@@ -73,7 +74,6 @@
                 <div class="col-lg-2">                    
                 </div>
                 <div class="col-lg-2 text-center">
-                
                     <img src="{% static "img/profile.jpg"%}" class="img-responsive img-circle"  alt="" id="profile_img">
                 </div>
                 
@@ -94,7 +94,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="{% url 'getlearn' %}" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -227,18 +227,38 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="{% static "img/portfolio/roundicons-free.png"%}" alt="">
-                            <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                            <p>
-                                <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
-                            <ul class="list-inline">
-                                <li>Date: July 2014</li>
-                                <li>Client: Round Icons</li>
-                                <li>Category: Graphic Design</li>
-                            </ul>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            <h2>Edit Profile</h2>
+                            
+                        {% for field in editForm.visible_fields %}
+                        {% for error in field.errors %}
+                        <p class="bg-danger err-msg"><span class="glyphicon glyphicon-exclamation-sign"></span> {{error}}</p>
+                        {% endfor %}
+                        {% endfor %}
+                        {% for error in editForm.non_field_errors %}
+                            <p class="bg-danger err-msg"><span class="glyphicon glyphicon-exclamation-sign"></span> {{error}}</p>
+                        {% endfor %}
+                        {% for error in errors %}
+                            <p class="bg-danger err-msg"><span class="glyphicon glyphicon-exclamation-sign"></span> {{error}}</p>
+                        {% endfor %}
+                        {% if msg %}
+                           <p class="bg-success err-msg"><span class="glyphicon glyphicon-ok-sign"></span>{{ msg }}</p>
+                        {% endif %}  
+                            
+                         <form role="form" method="POST" enctype="multipart/form-data" action="{% url 'editProfile' %}">  
+                            <fieldset>
+                                {% for field in editForm.visible_fields %}
+                                    <div class="form-group">
+                                        <span>
+                                          {{ field.label }}
+                                          {{ field }}
+                                        </span>
+                                    </div>
+                                {% endfor %}
+                                <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
+                            </fieldset>
+                             {% csrf_token %}
+                        </form>
+                            
                         </div>
                     </div>
                 </div>
@@ -379,7 +399,6 @@
             </div>
         </div>
     </div>
-
  {% endblock %}
 
     {% block origin-script %}
