--- a/chingoal/home/templates/dashboard.html
+++ b/chingoal/home/templates/dashboard.html
@@ -31,7 +31,7 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right"  id="menu">
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
@@ -43,16 +43,17 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="{% url 'store' %}">Store</a>
-                    </li>                    
-                    <li>
-                        <a class="page-scroll" href="#contact">About Us</a>
-                    </li>
-                    <li>
                         
-                     <a href="#portfolioModal1" class="portfolio-link page-scroll" data-toggle="modal">
-            <img src="{% static "img/profile.jpg"%}" class="img-responsive img-circle"  alt="" id="header_profile_picture">                                                
-                     </a>
-                    </li>
+                        <ul> 
+<li><a href="{% url 'logout' %}">Logout</a></li> 
+<li><a href="{% url 'editProfile' %}">Edit profile</a></li> 
+</ul> 
+                    </li>                    
+                    
+                    <li>
+                    <a href="#" class="page-scroll"><img src="{% static "img/profile.jpg"%}" class="img-responsive img-circle"  alt="" id="header_profile_picture"></a> 
+
+					</li> 
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
