--- a/chingoal/chingoal/static/css/custom_view_profile.css
+++ b/chingoal/chingoal/static/css/custom_view_profile.css
@@ -2,10 +2,11 @@
 body
 {
     font-family: 'Open Sans', sans-serif;
+	height:100%;
 }
- .card {
+.card {
+	position:relative;
     margin-top: 0px;
-	
     padding: 30px;
     background-color: rgba(214, 224, 226, 0.2);
     -webkit-border-top-left-radius:5px;
@@ -29,11 +30,10 @@ body
     background-color: #fff;
     background-color: rgba(255, 255, 255, 1);
 	width:96%;
+	height:170px;
 }
 .card.hovercard .card-background {
-    height: 130px;
-	
-	
+    height:70px;	
 }
 .card-background img {
     -webkit-filter: blur(25px);
@@ -57,6 +57,7 @@ body
     max-width: 100px;
     max-height: 100px;
 	margin-top:30px;
+	padding-bottom:0px;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
@@ -86,8 +87,8 @@ body
     text-overflow: ellipsis;
 }
 .card.hovercard .bottom {
-    padding: 0 20px;
-    
+    padding: 0 20px;  
+	
 }
 .btn-pref .btn {
     -webkit-border-radius:0 !important;
@@ -97,8 +98,70 @@ body
 	width:96%;
 	margin-left:25px;
 	margin-top:-30px;
+	
 	}
-.set-bottom {
-	 z-index:-100; 
+.set-bottom { 
 	 position:relative;
+	 z-index:0;
+	 left: 10px;
+	 top:30px;
+	 padding-top:50px;
+	}
+.follower{
+	position:relative;
+	left:200px;
+	top:-90px;
+	height:20px;
+	}	
+.tab-timeline{
+	padding-top:0px;
+	height:35px;
+	}
+#textarea1{
+	margin:20px 50px 0 10px;
+	width:95.5%;
+	height:150px;
+	border:2px solid rgba(0,0,0,1.00);
+	resize:none;
+}
+.button1{
+	border:1px black solid;
+	background-color: #ffffff;
+	border-radius:15px;
+	opacity:0.6;
+	float:right;
+	margin:10px 25px 10px 0px;
+	position:relative;
+	left:20px;
+	font-size:15px;
+	font-weight:bold;
+	}
+.hint{
+	position:relative;
+	width:150px;
+	left:270px;
+	top:-50px;
+	font-size:12px;
+	color:rgba(134,134,134,1.00);
+	}
+.personal{
+	positive:relative;
+	top:-30px;
+	left:30px;
+	border:1px red solid;
+	padding:0px;
+	}
+.rightRoll{ 
+	z-index:9999;
+	right:50px; 
+	width:400px; 
+	height:250px; 
+	border-radius:15px;
+	display:block;
+	position:fixed; 
+	top:345px; 
+	background:url(../static/img/bg1.jpg)
+}
+.div2{
+	border:1px solid red;
 	}
