--- a/chingoal/account/templates/account/register.html
+++ b/chingoal/account/templates/account/register.html
@@ -46,7 +46,7 @@
                         <a class="page-scroll" href="#account">Account</a>
                     </li> -->
                     <li>
-                        <a class="page-scroll" href="#team">About Us</a>
+                        <a class="page-scroll" href="{% url 'login' %}">Login</a>
                     </li>
                 </ul>
             </div>
