--- a/chingoal/account/templates/account/view_profile.html
+++ b/chingoal/account/templates/account/view_profile.html
@@ -158,11 +158,12 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Titles</h4>
-                                    <h4 class="subheading">Buy titles</h4>
+                                    <h4>{{ cur_user.title}}</h4>
+                                    <h4 class="subheading">{{ username }}</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Use</p>
+                                    <p class="text-muted">{{history.content}}</p>
+                                    <p class="text-muted">{{history.timestamp}}</p>
                                 </div>
                             </div>
                         </li>
@@ -172,11 +173,12 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Unlock Lessons</h4>
-                                    <h4 class="subheading">Unlock Lessons</h4>
+                                    <h4>{{ cur_user.title}}</h4>
+                                    <h4 class="subheading">{{ username }}</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Unlock </p>
+                                    <p class="text-muted">{{history.content}}</p>
+                                    <p class="text-muted">{{history.timestamp}}</p>
                                 </div>
                             </div>
                         </li>
