--- a/chingoal/testpage/templates/testpage/post_question.html
+++ b/chingoal/testpage/templates/testpage/post_question.html
@@ -98,7 +98,7 @@
                                 <button id="question-tr" type="button" class="btn btn-success btn-lg btn-block">Add Word Translate</button>
                                 </div>
                                 <div class="col-lg-4">
-                                <button type="button" class="btn btn-info btn-lg btn-block">Post</button>
+                                <button id="posttest" type="button" class="btn btn-info btn-lg btn-block">Post</button>
                                 </div>
                             </div>
                             
