--- a/chingoal/testpage/templates/translate.html
+++ b/chingoal/testpage/templates/translate.html
@@ -1,51 +1,34 @@
 <li>
+<form action="{% url 'testsavetrquestion' id %}" method="post">
 <div class="panel panel-success">
 <div class="panel-heading">
-Question <p class="question-num" style="display:inline">{{id}}</p> (Multiple Choice)
+Question <p class="question-num" style="display:inline">{{id}}</p> (Word Translate)
 </div>
 <div class="panel-body">
 <div class="form-group">
 <label>Input the question content</label>
-<input class="form-control" placeholder="Enter text">
+<div class="row">
+{% if form.question.errors %}
+<div class="col-lg-8">{{form.question}}</div>
+<div class="col-lg-4" style="color:red">{{form.question.errors}}</div>
+{% else %}
+<div class="col-lg-12">{{form.question}}</div>
+{% endif %}
+</div>
 <br>
-<label>Input the choice content</label>
-<div class="form-group input-group">
-<span class="input-group-addon">A</span>
-<input type="text" class="form-control" placeholder="Choice Text">
+<label>Input the answer content</label>
+<div class="row">
+{% if form.explanation.errors %}
+<div class="col-lg-8">{{form.explanation}}</div>
+<div class="col-lg-4" style="color:red">{{form.explanation.errors}}</div>
+{% else %}
+<div class="col-lg-12">{{form.explanation}}</div>
+{% endif %}
 </div>
-<div class="form-group input-group">
-<span class="input-group-addon">B</span>
-<input type="text" class="form-control" placeholder="Choice Text">
-</div>
-<div class="form-group input-group">
-<span class="input-group-addon">C</span>
-<input type="text" class="form-control" placeholder="Choice Text">
-</div>
-<div class="form-group input-group">
-<span class="input-group-addon">D</span>
-<input type="text" class="form-control" placeholder="Choice Text">
-</div>
-<label>Chooseing the correct answer</label>
-<label class="radio-inline">
-<input type="radio" name="optionsRadiosInline" id="optionsRadiosInline1" value="option1" checked>A
-</label>
-<label class="radio-inline">
-<input type="radio" name="optionsRadiosInline" id="optionsRadiosInline2" value="option2">B
-</label>
-<label class="radio-inline">
-<input type="radio" name="optionsRadiosInline" id="optionsRadiosInline3" value="option3">C
-</label>
-<label class="radio-inline">
-<input type="radio" name="optionsRadiosInline" id="optionsRadiosInline3" value="option4">D
-</label>
-<br>
-        <label>Answer Explanation</label>
-<input class="form-control" placeholder="Explanation">
-</div>
+</div>            
 </div>
 <div class="panel-footer">
 <button type="button" class="btn btn-info save-btn">Save</button>
-<!-- <button type="button" class="btn btn-warning">Edit</button> -->
 <button type="button" class="btn btn-danger delete-btn">Delete</button>
 </div>
 </div>
