--- a/chingoal/discussion/templates/discussion/discussion_board.html
+++ b/chingoal/discussion/templates/discussion/discussion_board.html
@@ -110,7 +110,8 @@
             <div class="col-lg-5"></div>
             <div class="col-lg-2">
             <div class="row">
-                <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">New Post</button>		                <button class="btn btn-primary btn-lg" >Going to chatroom</button>
+                <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">New Post</button>
+                <a class="btn btn-primary btn-lg" href="{% url 'chat' %}">Going to chatroom</a>
             </div>
             </div>
             <div class="col-lg-5"></div>
