--- a/chingoal/testpage/templates/testpage/learn.html
+++ b/chingoal/testpage/templates/testpage/learn.html
@@ -83,11 +83,11 @@
                             <div class="col-lg-8">
                                 <p>
                                     <strong>Learning Progress</strong>
-                                    <span class="pull-right text-muted">40% Complete</span>
+                                    <span class="pull-right text-muted">20% Complete</span>
                                 </p>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="40"
-                                            aria-valuemin="0" aria-valuemax="100" style="width:40%">
+                                            aria-valuemin="0" aria-valuemax="100" style="width:20%">
                                         <span class="sr-only">70% Complete</span>
                                     </div>
                                 </div>
@@ -229,7 +229,9 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
-            <button type="button" class="btn btn-primary" onclick="location.href='discussion_board.html'">Discuss</button>
+            <!-- This is for presentation -->
+            <button type="button" class="btn btn-primary" onclick="location.href='{% url 'learnaudio' %}'">Next</button>
+            <!-- <button type="button" class="btn btn-primary" onclick="location.href='{% url 'getlearn' cur_user.current_level cur_user.current_lesson|add:1 %}'">Next</button> -->
         </div>
     </div>
     <!-- /.modal-content -->
