--- a/chingoal/testpage/templates/testpage/learn_audio.html
+++ b/chingoal/testpage/templates/testpage/learn_audio.html
@@ -101,37 +101,61 @@
                     </div>
                     <div class="panel-body">
                         <h4>Please Listen to following audio and repeat</h4>
-                        <div class="row">                            
-                            <div class="col-lg-2">
-                                <i class="fa fa-file-audio-o"></i>
+                        <div class="row">       
+                            <div class="col-lg-1"></div>                     
+                            <div class="col-lg-1">
+                                <br><br>
+                                <p><i class="fa fa-play fa-lg" id="play_button"></i></p>
+                                <br>
+                                <p><i class="fa fa-play-circle fa-lg" id="restart_button"></i></p>
                             </div>
-                            <div class="col-lg-2">
-                                <i class="fa fa-play" id="play_button"></i>
+                            <!-- <div class="col-lg-2">
+                                
                             </div>
 
                             <div class="col-lg-2">
-                                <i class="fa fa-play-circle" id="restart_button"></i>
-                            </div>
-                            <div class="col-lg-6" id="wave_standard">
                                 
+                            </div> -->
+                            <div class="col-lg-10">
+                                <canvas style="width:400px;height:150px;background-color:#fcf8e3"></canvas>
                             </div>
-                        </div>
-                        <div class="row">
-                            Please press the recording button anytime when you are ready.
-                        </div>
-                        <div class="row">
+                        </div>                        
+                        <h5>Please record anytime when you are ready.</h5>
+                        
+                        <!-- <div class="row">
                             <div class="col-lg-2">
-                                <i class="fa fa-microphone" id="record_button"></i>
+                                <i class="fa fa-microphone" id="startButton"></i>
                             </div>
                             <div class="col-lg-2">
-                                <i class="fa fa-play" id="play_record_button"></i>
+                                <i class="fa fa-floppy"></i>
                             </div>
                             <div class="col-lg-2">
                                 <i class="fa fa-play-circle" id="restart_record_button"></i>
-                            </div>  
-                            <div class="col-lg-6" id="wave_user">
-                                
                             </div>                      
+                        </div> -->
+                        <div class="row">
+                            <div class="col-lg-1"></div>
+                            <div class="col-lg-1">
+                                <br><br><br>                                
+                                <p><i class="fa fa-microphone fa-2x" id="startButton"></i></p>
+                                
+                            </div>
+                            <div class="col-lg-8">
+                                <canvas id="visualizer" style="width:400px;height:150px;background-color:#fcf8e3"></canvas>
+                            </div>
+                            <div class="col-lg-2"></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-1"></div>
+                            <div class="col-lg-1">
+                                <br><br><br>
+                                <p><a href="" id="saveButton" style="text-decoration:none;color: inherit;"><i class="fa fa-floppy-o fa-2x"></i></a></p>
+                            </div>
+                            <div class="col-lg-8">
+                                <canvas id="wave_user" style="width:400px;height:150px;background-color:#fcf8e3"></canvas>
+                            </div>
+                            <div class="col-lg-2"></div>
+                            
                         </div>
                     </div>
                     <div class="panel-footer">
@@ -160,7 +184,7 @@
                     </div>
                     <div class="col-lg-8">
                         <img src="{{cur_user.photo.url}}" class="img-responsive img-circle">
-                        <button type="button" class="btn btn-primary btn-lg btn-block" onclick="location.href='{% url 'gettest' %}'">Testout</button>
+                        <button type="button" class="btn btn-primary btn-lg btn-block" onclick="location.href='{% url 'gettest' cur_user.current_level %}'">Testout</button>
                     </div>
                     <div class="col-lg-2">
                     </div>
@@ -228,4 +252,16 @@
 <!-- /.modal-dialog -->
 </div>
 <!-- /.modal -->       
+{% endblock %}
+
+{% block script-content %}
+    {% load static %}
+    <!-- // <script type="text/javascript" src="/static/js/jquery-2.1.4.min.js"></script> -->
+    
+    <script src="{% static 'js/visualizeWave.js' %}" type="text/javascript"></script>
+
+    <script src="{% static 'js/custom_recorder.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/custom_audio.js' %}" type="text/javascript"></script>
+
+
 {% endblock %}
