--- a/chingoal/home/templates/dashboard.html
+++ b/chingoal/home/templates/dashboard.html
@@ -95,6 +95,7 @@
     <!-- Portfolio Grid Section -->
     <section id="portfolio" class="bg-light-gray">
         <div class="container" id="container" style="z-index:0;">
+
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Lessons</h2>
@@ -118,6 +119,11 @@
                     <h4 class="text-muted">Teacher</h4>
                     {% endif %}
                 </div>
+                            <div class="facebook-this">
+    <a href="{{ facebook_url }}" target="_blank">{{link_text}}</a>
+</div>
+                <button onclick="postToFB()">PostToFB</button>
+
                 <div class="col-lg-4 text-center">
                     {% if flag == 0 %}
                     <h3>Achievement</h3>
@@ -626,6 +632,8 @@
     {% endblock %}
     
     {% block origin-script %}
+    <script src="/static/js/fbAuthentication.js" type="text/javascript"></script>
+
     {% endblock %}
     
     {% block model-define %}
