--- a/chingoal/testpage/templates/testpage/post_question.html
+++ b/chingoal/testpage/templates/testpage/post_question.html
@@ -46,7 +46,9 @@
                     </li>                    
                     
                     <li class="dropdown">
-                    
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                             <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
+                    </a>
                     <ul class="dropdown-menu dropdown-user">
                         <li><a href="{% url 'viewProfile' username %}"><i class="fa fa-user fa-fw"></i> User Profile</a>
                         </li>
